cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-assembly-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 54
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-assembly-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "library",
      "name": "acme-library-a",
      "version": "1.0.0",
      "components": [
        {
          "type": "library",
          "name": "acme-library-b",
          "version": "2.0.0"
        }
      ]
    }
  ],
  "services": [
    {
      "name": "acme-service-a",
      "services": [
        {
          "name": "acme-service-b"
        }
      ]
    }
  ]
}
