cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-component-ref-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 54
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-component-ref-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "library",
      "bom-ref": "123",
      "name": "acme-library",
      "version": "1.0.0"
    },
    {
      "type": "library",
      "bom-ref": "456",
      "name": "acme-library",
      "version": "1.0.0"
    }
  ]
}
