cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_json_specifications@valid-formulation-1.5.json.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-formulation-1.5.json
---
{
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "serialNumber": "urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79",
  "components": [
    {
      "type": "library",
      "publisher": "Acme Inc",
      "group": "org.example",
      "name": "mylibrary",
      "version": "1.0.0"
    }
  ],
  "formulation": [
    {
      "bom-ref": "formula-1",
      "components": [
        {
          "type": "platform",
          "bom-ref": "component-1",
          "name": "Pipeline controller image",
          "version": "v0.47.0"
        }
      ],
      "workflows": [
        {
          "bom-ref": "workflow-1",
          "uid": "8edb2b08-e2c7-11ed-b5ea-0242ac120002",
          "name": "My workflow",
          "description": "Workflow description here",
          "resourceReferences": [
            {
              "ref": "component-a"
            }
          ],
          "tasks": [
            {
              "bom-ref": "task-1",
              "uid": "task-uid-1",
              "name": "fetch-repository",
              "description": "Description here",
              "resourceReferences": [
                {
                  "ref": "component-a"
                }
              ],
              "taskTypes": [
                "clone",
                "build"
              ],
              "trigger": {
                "bom-ref": "trigger-1",
                "uid": "trigger-1",
                "type": "api"
              },
              "steps": [
                {
                  "name": "My step"
                }
              ],
              "inputs": [
                {
                  "resource": {
                    "ref": "component-a"
                  }
                }
              ],
              "outputs": [
                {
                  "resource": {
                    "ref": "component-b"
                  }
                }
              ],
              "timeStart": "2023-01-01T00:00:00+00:00",
              "timeEnd": "2023-01-01T00:00:00+00:00",
              "workspaces": [
                {
                  "bom-ref": "workspace-1",
                  "uid": "workspace-uid-1",
                  "name": "workspace"
                }
              ],
              "runtimeTopology": [
                {
                  "ref": "task-1",
                  "dependsOn": [
                    "task-2"
                  ]
                }
              ]
            }
          ],
          "taskDependencies": [
            {
              "ref": "task-1",
              "dependsOn": [
                "task-2"
              ]
            }
          ],
          "taskTypes": [
            "clone",
            "build"
          ],
          "trigger": {
            "bom-ref": "trigger-2",
            "uid": "trigger-uid-2",
            "name": "My trigger",
            "description": "Description here",
            "resourceReferences": [
              {
                "ref": "component-a"
              }
            ],
            "type": "api",
            "event": {
              "uid": "event-1",
              "description": "Description here",
              "timeReceived": "2023-01-01T00:00:00+00:00",
              "data": {
                "content": "Foo/Bar",
                "contentType": "text/plain"
              },
              "source": {
                "ref": "component-g"
              },
              "target": {
                "ref": "component-h"
              },
              "properties": [
                {
                  "name": "Foo",
                  "value": "Bar"
                }
              ]
            },
            "conditions": [
              {
                "description": "Description here",
                "expression": "1 == 1",
                "properties": [
                  {
                    "name": "Foo",
                    "value": "Bar"
                  }
                ]
              }
            ],
            "timeActivated": "2023-01-01T00:00:00+00:00",
            "inputs": [
              {
                "resource": {
                  "ref": "component-10"
                },
                "source": {
                  "ref": "component-11"
                },
                "target": {
                  "ref": "component-12"
                }
              }
            ],
            "outputs": [
              {
                "resource": {
                  "ref": "component-14"
                },
                "type": "artifact",
                "source": {
                  "ref": "component-15"
                },
                "target": {
                  "ref": "component-16"
                }
              }
            ],
            "properties": [
              {
                "name": "Foo",
                "value": "Bar"
              }
            ]
          },
          "steps": [
            {
              "commands": [
                {
                  "executed": "ls -las",
                  "properties": [
                    {
                      "name": "Foo",
                      "value": "Bar"
                    }
                  ]
                }
              ],
              "description": "Description here",
              "name": "My step",
              "properties": [
                {
                  "name": "Foo",
                  "value": "Bar"
                }
              ]
            }
          ],
          "inputs": [
            {
              "environmentVars": [
                {
                  "name": "Foo",
                  "value": "Bar"
                }
              ]
            },
            {
              "environmentVars": [
                "FooBar"
              ]
            },
            {
              "environmentVars": [
                {
                  "name": "Foo",
                  "value": "Bar"
                },
                "FooBar"
              ]
            }
          ],
          "outputs": [
            {
              "environmentVars": [
                {
                  "name": "Foo",
                  "value": "Bar"
                }
              ]
            },
            {
              "environmentVars": [
                "FooBar"
              ]
            },
            {
              "environmentVars": [
                {
                  "name": "Foo",
                  "value": "Bar"
                },
                "FooBar"
              ]
            }
          ],
          "timeStart": "2023-01-01T00:00:00+00:00",
          "timeEnd": "2023-01-01T00:00:00+10:00",
          "workspaces": [
            {
              "bom-ref": "workspace-1",
              "uid": "workspace-1",
              "name": "My workspace",
              "aliases": [
                "default-workspace"
              ],
              "description": "Description here",
              "resourceReferences": [
                {
                  "ref": "component-t"
                }
              ],
              "accessMode": "read-write",
              "mountPath": "/tmp/workspace",
              "managedDataType": "ConfigMap",
              "volumeRequest": "requestedVolumeClaim",
              "volume": {
                "uid": "volume-1",
                "name": "My volume",
                "mode": "filesystem",
                "path": "/",
                "persistent": true,
                "remote": false
              }
            }
          ],
          "runtimeTopology": [
            {
              "ref": "component-s",
              "dependsOn": [
                "component-r"
              ]
            }
          ],
          "properties": [
            {
              "name": "Foo",
              "value": "Bar"
            }
          ]
        }
      ]
    }
  ]
}
